fix(flex): allow wrapping in card and profile layouts to eliminate overflow on ultra-small viewports

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -32,6 +32,7 @@ img,
 picture,
 svg {
   max-width: 100%;
+  height: auto;
   display: block;
 }
 
