--- a/src/styles/layout/_container.scss
+++ b/src/styles/layout/_container.scss
@@ -8,7 +8,7 @@
 
 .layout-container {
   margin-inline: auto;
-  padding-inline: $space-400;
+  padding-inline: clamp(1.6rem, 5vw, 2.4rem); // responsive padding
   margin-block: 8.1rem;
 
   // -----------------------------
